--- a/landingpage.html
+++ b/landingpage.html
@@ -125,7 +125,7 @@
             <div class="image-gallery" >
                 <!--using svg for background styling-->
                 <svg class="Bottom" >
-                    <rect id="Bottom" rx="0" ry="0" x="0" y="0" width="100%" height="100%">
+                    <rect id="Bottom" rx="0" ry="0" x="0" y="0" width="100%" height="600px">
                     </rect>
                 </svg>
                 <!--heading-->
