--- a/landingpage.html
+++ b/landingpage.html
@@ -54,14 +54,17 @@
                 </div>
 
                 <!--icons section-->
-                <div class="col-sm-2">
-                    <div class="col-sm-2" style="padding:15px; font-size:24px; color: white; margin-right: 20px;" >
-                        <i class="fa-sharp fa-solid fa-magnifying-glass " ></i>
-                                        </div>
-                    <div class="col-sm-2" style="padding:15px; font-size:24px; color: white;">
-                        <i class="fa-solid fa-circle-user"></i>
-                                        </div>
-                </div>
+                <div class="col-sm-1" style=" font-size:24px; color: white;">
+                    <i class="fa-solid fa-circle-user"></i>
+                                    </div>
+                    <div class="col-sm-1"  >
+                        <form class="back" style="font: 24px;">
+                            <input type="text" name="search" class="extand ">
+                            <span class="fa fa-search searchicon" aria-hidden="true"> 
+                          </span>
+                          </form>
+                      </div>
+                </div> 
               </div>
             </div>
 
