--- a/landingpage.html
+++ b/landingpage.html
@@ -58,11 +58,14 @@
                     <i class="fa-solid fa-circle-user"></i>
                                     </div>
                     <div class="col-sm-1"  >
-                        <form class="back" style="font: 24px;">
-                            <input type="text" name="search" class="extand ">
-                            <span class="fa fa-search searchicon" aria-hidden="true"> 
-                          </span>
-                          </form>
+                        <form action="" class="search-form" style="padding-right:30px ; padding-top:14px;">
+                            <div class="form-group has-feedback">
+                                <label for="search" class="sr-only">Search</label>
+                                <input type="text" class="form-control" name="search" id="search" placeholder="search">
+                                  <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                            </div>
+                        </form>
+                          
                       </div>
                 </div> 
               </div>
@@ -81,7 +84,7 @@
 
 <!--Section 3(trip details(menu))-->
           
-          <div class="trip-details" style="height: 200px;">
+          <div class="trip-details" style="height: 175px;">
             <!--button groups-->
             <div class="col-sm-8" style="padding-left: 0px; ">
                 <div class="col-sm-2" style="padding-left: 0px; padding-right: 0px;">
