fixed navbar and dropdown menus

--- a/landingpage.html
+++ b/landingpage.html
@@ -34,7 +34,7 @@
                     <h4>LOGO</h4>
                     <!--logo missing-->
                 </div>
-                <div class="col-sm-8" style="padding-left: 60px;">
+                <div class="col-sm-7" style="padding-left: 60px;">
                     <div class="col-sm-2">
                         <h4>Explore</h4>
                     </div>
@@ -54,12 +54,12 @@
                 </div>
 
                 <!--icons section-->
-                <div class="col-sm-1" style=" font-size:24px; color: white;">
-                    <i class="fa-solid fa-circle-user"></i>
+                <div class="col-sm-1" style=" font-size:24px; color: white; padding-top: 0px; margin-bottom:50px; padding-left: 60px;">
+                    <i class="fa-solid fa-circle-user" style="padding-top: 10px;"></i>
                 </div>
                 <!--expandable search bar-->
-                <div class="col-sm-1">
-                    <form action="" class="search-form" style="padding-right:30px ; padding-top:14px;">
+                <div class="col-sm-2">
+                    <form action="" class="search-form" style="padding-right:30px ; padding-top:5px; padding-left: 0px;">
                         <div class="form-group has-feedback">
                             <label for="search" class="sr-only">Search</label>
                             <input type="text" class="form-control" name="search" id="search" placeholder="search">
@@ -91,10 +91,10 @@
             <div class="col-sm-2" style="padding-left: 0px; padding-right: 0px;">
                 <button type="button" class="btn btn-primary">Round Trip</button>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="margin-left: 20px;">
                 <button type="button" class="btn btn-primary">One Way</button>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="margin-left:15px ;">
                 <button type="button" class="btn btn-primary">MultiCity</button>
             </div>
         </div>
@@ -104,31 +104,31 @@
         <div class="col-sm-9 " style="background:white; width: fit-content;  ">
             <!--dropdowns-->
             <div class="col-sm-2" style="padding:25px ; margin-right: 30px;">
-                <div class="dropdown" style="display: flex;">
+                <div class="dropdown" ;">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa-solid fa-map-location" style="padding-top: 2px;"></i>Location<i
                             class="fa-solid fa-caret-down" style="padding-top: 2px; padding-left:0px ;"></i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <p class="dropdown-item" >Action</p>
+                        <p class="dropdown-item">Another action</p>
+                        <p class="dropdown-item">Something else here</p>
                     </div>
                 </div>
                 <h4>Lofoten Islands</h4>
             </div>
             <div class="col-sm-2" style="padding:25px; margin-left: 30px;">
-                <div class="dropdown" style="display: flex;">
+                <div class="dropdown" >
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa-solid fa-users" style="padding-top: 2px;"></i> Guests<i
                             class="fa-solid fa-caret-down" style="padding-top: 2px; padding-left:0px ;"></i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <p class="dropdown-item" >Action</p><br>
+                        <p class="dropdown-item" >Another action</p><br>
+                        <p class="dropdown-item" >Something else here</p>
                     </div>
                 </div>
                 <h4>2 Adults</h4>
@@ -140,24 +140,24 @@
                         <i class="fa-solid fa-hand-holding" style="padding-top: 2px;"></i>Arriving <i
                             class="fa-solid fa-caret-down" style="padding-top: 2px; padding-left:0px ;"></i> </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <p class="dropdown-item" >Action</p>
+                        <p class="dropdown-item" >Another action</p>
+                        <p class="dropdown-item" >Something else here</p>
                     </div>
                 </div>
                 <h4>May 8th,2021</h4>
             </div>
             <div class="col-sm-2" style="padding:25px; margin-left: 30px;">
-                <div class="dropdown" style="display: flex;">
+                <div class="dropdown" >
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa-solid fa-plane-departure" style="padding-top: 2px;"></i>Departing <i
                             class="fa-solid fa-caret-down" style="padding-top: 2px; padding-left:0px ;"></i>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <p class="dropdown-item">Action</p>
+                        <p class="dropdown-item">Another action</p>
+                        <p class="dropdown-item">Something else here</p>
                     </div>
                 </div>
                 <h4>May 19th,2021</h4>
